force-app/main/default/objects/Donnees_Vente__c/Donnees_Vente__c.object-meta.xml
<CustomObject>
    <label>Données Vente</label>
    <nameField>
        <displayFormat>TEL-{0000}</displayFormat>
        <label>Nom de Données Vente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Données Ventes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>