force-app/main/default/objects/Donnees_Vente__c/fields/Abonement_gaz_HT__c.field-meta.xml
<CustomField>
    <fullName>Abonement_gaz_HT__c</fullName>
    <label>Abonnement gaz HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>