force-app/main/default/objects/Donnees_Vente__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>@Projet : Smile</description>
    <label>Nom du compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Données Ventes</relationshipLabel>
    <relationshipName>Donnees_Ventes</relationshipName>
    <type>Lookup</type>
</CustomField>