force-app/main/default/objects/Donnees_Vente__c/fields/Adresse_facturation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation__c</fullName>
    <label>Adresse facturation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>