force-app/main/default/objects/Donnees_Vente__c/fields/Ajustement_mensualite__c.field-meta.xml
<CustomField>
    <fullName>Ajustement_mensualite__c</fullName>
    <description>AJUSTEMENT_MENSUALITE</description>
    <label>Ajustement mensualité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>