force-app/main/default/objects/Donnees_Vente__c/fields/Ancien_occupant__c.field-meta.xml
<CustomField>
    <fullName>Ancien_occupant__c</fullName>
    <label>Ancien occupant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>