force-app/main/default/objects/Donnees_Vente__c/fields/Annee_construction_futur_logement__c.field-meta.xml
<CustomField>
    <fullName>Annee_construction_futur_logement__c</fullName>
    <label>Année construction futur logement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>