force-app/main/default/objects/Donnees_Vente__c/fields/Assurance_facture__c.field-meta.xml
<CustomField>
    <fullName>Assurance_facture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assurance facture</label>
    <type>Checkbox</type>
</CustomField>