force-app/main/default/objects/Donnees_Vente__c/fields/Batiment__c.field-meta.xml
<CustomField>
    <fullName>Batiment__c</fullName>
    <label>bâtiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>