force-app/main/default/objects/Donnees_Vente__c/fields/Besoin__c.field-meta.xml
<CustomField>
    <fullName>Besoin__c</fullName>
    <description>@projet: Smile</description>
    <label>Besoin</label>
    <length>80</length>
    <type>Text</type>
</CustomField>