force-app/main/default/objects/Donnees_Vente__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smile</fullName>
            </value>
            <value>
                <fullName>Distributeurs</fullName>
            </value>
            <value>
                <fullName>Pure players</fullName>
            </value>
            <value>
                <fullName>Tunnel en ligne</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Store/Corner</fullName>
            </value>
            <value>
                <fullName>Télévente</fullName>
            </value>
            <value>
                <fullName>Vente directe</fullName>
            </value>
            <value>
                <fullName>Harmonica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>