force-app/main/default/objects/Donnees_Vente__c/fields/Cap_eco_conso__c.field-meta.xml
<CustomField>
    <fullName>Cap_eco_conso__c</fullName>
    <description>CAP_ECO_CONSO</description>
    <label>Cap eco conso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>