force-app/main/default/objects/Donnees_Vente__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseId</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Données Ventes</relationshipLabel>
    <relationshipName>Donn_es_Ventes</relationshipName>
    <type>Lookup</type>
</CustomField>