force-app/main/default/objects/Donnees_Vente__c/fields/CGU_FEL_acceptation__c.field-meta.xml
<CustomField>
    <fullName>CGU_FEL_acceptation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CGU FEL Acceptation</label>
    <type>Checkbox</type>
</CustomField>