force-app/main/default/objects/Donnees_Vente__c/fields/Civilite_client__c.field-meta.xml
<CustomField>
    <fullName>Civilite_client__c</fullName>
    <label>Civilité client</label>
    <length>80</length>
    <type>Text</type>
</CustomField>