force-app/main/default/objects/Donnees_Vente__c/fields/Civilite_co_titulaire__c.field-meta.xml
<CustomField>
    <fullName>Civilite_co_titulaire__c</fullName>
    <label>Civilité co titulaire</label>
    <length>80</length>
    <type>Text</type>
</CustomField>