force-app/main/default/objects/Donnees_Vente__c/fields/Code_enseigne_cp_web__c.field-meta.xml
<CustomField>
    <fullName>Code_enseigne_cp_web__c</fullName>
    <label>code enseigne cp web</label>
    <length>80</length>
    <type>Text</type>
</CustomField>