force-app/main/default/objects/Donnees_Vente__c/fields/CODE_FTA__c.field-meta.xml
<CustomField>
    <fullName>CODE_FTA__c</fullName>
    <label>Code FTA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>