force-app/main/default/objects/Donnees_Vente__c/fields/Code_offre_elec__c.field-meta.xml
<CustomField>
    <fullName>Code_offre_elec__c</fullName>
    <label>Code offre elec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>