force-app/main/default/objects/Donnees_Vente__c/fields/Code_pack__c.field-meta.xml
<CustomField>
    <fullName>Code_pack__c</fullName>
    <description>CODE_PACK</description>
    <label>Code pack</label>
    <length>80</length>
    <type>Text</type>
</CustomField>