force-app/main/default/objects/Donnees_Vente__c/fields/Code_postal_adr_facuration__c.field-meta.xml
<CustomField>
    <fullName>Code_postal_adr_facuration__c</fullName>
    <label>Code postal adresse facuration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>