force-app/main/default/objects/Donnees_Vente__c/fields/Code_postal_ancien_logement__c.field-meta.xml
<CustomField>
    <fullName>Code_postal_ancien_logement__c</fullName>
    <description>CODE_POSTAL_ANCIEN_LOGEMENT</description>
    <label>Code postal ancien</label>
    <length>80</length>
    <type>Text</type>
</CustomField>