force-app/main/default/objects/Donnees_Vente__c/fields/Code_postale__c.field-meta.xml
<CustomField>
    <fullName>Code_postale__c</fullName>
    <label>Code postale</label>
    <length>80</length>
    <type>Text</type>
</CustomField>