force-app/main/default/objects/Donnees_Vente__c/fields/Code_promotion__c.field-meta.xml
<CustomField>
    <fullName>Code_promotion__c</fullName>
    <label>Code promotion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>