force-app/main/default/objects/Donnees_Vente__c/fields/Commune_adr_facturation__c.field-meta.xml
<CustomField>
    <fullName>Commune_adr_facturation__c</fullName>
    <label>Commune adresse facturation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>