force-app/main/default/objects/Donnees_Vente__c/fields/Compte_client__c.field-meta.xml
<CustomField>
    <fullName>Compte_client__c</fullName>
    <label>Compte client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>