force-app/main/default/objects/Donnees_Vente__c/fields/Compteur_communicant_elec__c.field-meta.xml
<CustomField>
    <fullName>Compteur_communicant_elec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compteur communicant elec</label>
    <type>Checkbox</type>
</CustomField>