force-app/main/default/objects/Donnees_Vente__c/fields/Consent_prospection_engie_analogue__c.field-meta.xml
<CustomField>
    <fullName>Consent_prospection_engie_analogue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent prospection engie analogue</label>
    <type>Checkbox</type>
</CustomField>