force-app/main/default/objects/Donnees_Vente__c/fields/Consent_prospection_engie_non_analogue__c.field-meta.xml
<CustomField>
    <fullName>Consent_prospection_engie_non_analogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CONSENT_PROSPECTION_ENGIE_NON_ANALOGUE</description>
    <label>Consent prospection engie non analogue</label>
    <type>Checkbox</type>
</CustomField>