force-app/main/default/objects/Donnees_Vente__c/fields/Consent_prospection_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Consent_prospection_partenaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CONSENT_PROSPECTION_PARTENAIRE</description>
    <label>Consent prospection partenaire</label>
    <type>Checkbox</type>
</CustomField>