force-app/main/default/objects/Donnees_Vente__c/fields/Consomation_elec_HP_TTC__c.field-meta.xml
<CustomField>
    <fullName>Consomation_elec_HP_TTC__c</fullName>
    <label>Consommation elec HP TTC</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>