force-app/main/default/objects/Donnees_Vente__c/fields/Consomation_elec_simple_HT__c.field-meta.xml
<CustomField>
    <fullName>Consomation_elec_simple_HT__c</fullName>
    <label>Consommation elec simple HT</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>