force-app/main/default/objects/Donnees_Vente__c/fields/Contrat_a_resilier__c.field-meta.xml
<CustomField>
    <fullName>Contrat_a_resilier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat à résilier</label>
    <type>Checkbox</type>
</CustomField>