force-app/main/default/objects/Donnees_Vente__c/fields/Date_mise_en_service__c.field-meta.xml
<CustomField>
    <fullName>Date_mise_en_service__c</fullName>
    <description>DATE_DE_MISE_EN_SERVICE_DEMANDEE</description>
    <label>Date de mise en service demandée</label>
    <type>Date</type>
</CustomField>