force-app/main/default/objects/Donnees_Vente__c/fields/Date_releve_compteur__c.field-meta.xml
<CustomField>
    <fullName>Date_releve_compteur__c</fullName>
    <label>Date relève compteur</label>
    <type>Date</type>
</CustomField>