force-app/main/default/objects/Donnees_Vente__c/fields/Date_resiliation__c.field-meta.xml
<CustomField>
    <fullName>Date_resiliation__c</fullName>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>