force-app/main/default/objects/Donnees_Vente__c/fields/Degex__c.field-meta.xml
<CustomField>
    <fullName>Degex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Degex</label>
    <type>Checkbox</type>
</CustomField>