force-app/main/default/objects/Donnees_Vente__c/fields/Degexplus__c.field-meta.xml
<CustomField>
    <fullName>Degexplus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEGEX+</label>
    <type>Checkbox</type>
</CustomField>