force-app/main/default/objects/Donnees_Vente__c/fields/Deja_client_engie__c.field-meta.xml
<CustomField>
    <fullName>Deja_client_engie__c</fullName>
    <label>Déjà client engie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>