force-app/main/default/objects/Donnees_Vente__c/fields/Depex__c.field-meta.xml
<CustomField>
    <fullName>Depex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depex</label>
    <type>Checkbox</type>
</CustomField>