force-app/main/default/objects/Donnees_Vente__c/fields/Depexplus__c.field-meta.xml
<CustomField>
    <fullName>Depexplus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEPEX+</label>
    <type>Checkbox</type>
</CustomField>