force-app/main/default/objects/Donnees_Vente__c/fields/Diagnostic_securite_instal_gaz__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_securite_instal_gaz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnostic securité instal gaz</label>
    <type>Checkbox</type>
</CustomField>