force-app/main/default/objects/Donnees_Vente__c/fields/Dispositif_chauffage__c.field-meta.xml
<CustomField>
    <fullName>Dispositif_chauffage__c</fullName>
    <label>Dispositif de chauffage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individuel</fullName>
            </value>
            <value>
                <fullName>Collectif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>