force-app/main/default/objects/Donnees_Vente__c/fields/Dispositif_production_eau_chaude__c.field-meta.xml
<CustomField>
    <fullName>Dispositif_production_eau_chaude__c</fullName>
    <label>Dispositif de production d&apos;eau chaude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individuel</fullName>
            </value>
            <value>
                <fullName>Collectif</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>