force-app/main/default/objects/Donnees_Vente__c/fields/E_documents__c.field-meta.xml
<CustomField>
    <fullName>E_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E document</label>
    <type>Checkbox</type>
</CustomField>