force-app/main/default/objects/Donnees_Vente__c/fields/E_service_prelevement_auto__c.field-meta.xml
<CustomField>
    <fullName>E_service_prelevement_auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E service prélèvement auto</label>
    <type>Checkbox</type>
</CustomField>