force-app/main/default/objects/Donnees_Vente__c/fields/E_services_FEL__c.field-meta.xml
<CustomField>
    <fullName>E_services_FEL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E services FEL</label>
    <type>Checkbox</type>
</CustomField>