force-app/main/default/objects/Donnees_Vente__c/fields/elec_vert_plus__c.field-meta.xml
<CustomField>
    <fullName>elec_vert_plus__c</fullName>
    <label>elec vert+</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
            <value>
                <fullName>non</fullName>
                <isActive>false</isActive>
                <label>non</label>
            </value>
            <value>
                <fullName>oui</fullName>
                <isActive>false</isActive>
                <label>oui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>