force-app/main/default/objects/Donnees_Vente__c/fields/Eligibilite_promo_web__c.field-meta.xml
<CustomField>
    <fullName>Eligibilite_promo_web__c</fullName>
    <label>Eligibilité promo web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>