force-app/main/default/objects/Donnees_Vente__c/fields/eligibilite_remise_web__c.field-meta.xml
<CustomField>
    <fullName>eligibilite_remise_web__c</fullName>
    <label>eligibilite remise web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>