force-app/main/default/objects/Donnees_Vente__c/fields/email_partenaire__c.field-meta.xml
<CustomField>
    <fullName>email_partenaire__c</fullName>
    <label>email partenaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>