force-app/main/default/objects/Donnees_Vente__c/fields/EmailRisque__c.field-meta.xml
<CustomField>
    <fullName>EmailRisque__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ est un flag qui sera renseigné par le TEL. 
Si la checkbox est à true cela signifie que le mail renseigné par le client n&apos;est pas valide</description>
    <label>Email Risque</label>
    <type>Checkbox</type>
</CustomField>