force-app/main/default/objects/Donnees_Vente__c/fields/Energie_production_eau_chaude__c.field-meta.xml
<CustomField>
    <fullName>Energie_production_eau_chaude__c</fullName>
    <label>energie production eau chaude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaz_naturel</fullName>
                <label>Gaz naturel</label>
            </value>
            <value>
                <fullName>Électricité</fullName>
            </value>
            <value>
                <fullName>Fioul</fullName>
            </value>
            <value>
                <fullName>Réseau_de_chaleur</fullName>
                <label>Réseau de chaleur</label>
            </value>
            <value>
                <fullName>Propane_GPL</fullName>
                <label>Propane GPL</label>
            </value>
            <value>
                <fullName>Butane</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Solaire</fullName>
            </value>
            <value>
                <fullName>Autre_énergie_renouvelable</fullName>
                <label>Autre énergie renouvelable</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>NSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>