force-app/main/default/objects/Donnees_Vente__c/fields/Escalier__c.field-meta.xml
<CustomField>
    <fullName>Escalier__c</fullName>
    <label>Escalier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>