force-app/main/default/objects/Donnees_Vente__c/fields/Espace_client__c.field-meta.xml
<CustomField>
    <fullName>Espace_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ESPACE_CLIENT</description>
    <label>Espace client</label>
    <type>Checkbox</type>
</CustomField>