force-app/main/default/objects/Donnees_Vente__c/fields/Estimation_budget_annuel__c.field-meta.xml
<CustomField>
    <fullName>Estimation_budget_annuel__c</fullName>
    <label>Estimation budget annuel</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>