force-app/main/default/objects/Donnees_Vente__c/fields/Estimation_conso_elec_HP__c.field-meta.xml
<CustomField>
    <fullName>Estimation_conso_elec_HP__c</fullName>
    <label>Estimaation conso elec HP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>