force-app/main/default/objects/Donnees_Vente__c/fields/Estimation_conso_elec_we__c.field-meta.xml
<CustomField>
    <fullName>Estimation_conso_elec_we__c</fullName>
    <label>Estimation conso elec WE</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>