force-app/main/default/objects/Donnees_Vente__c/fields/Etage__c.field-meta.xml
<CustomField>
    <fullName>Etage__c</fullName>
    <label>Etage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>