force-app/main/default/objects/Donnees_Vente__c/fields/HA_Enseigne__c.field-meta.xml
<CustomField>
    <fullName>HA_Enseigne__c</fullName>
    <label>Enseigne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>