force-app/main/default/objects/Donnees_Vente__c/fields/HA_Type_Enseigne__c.field-meta.xml
<CustomField>
    <fullName>HA_Type_Enseigne__c</fullName>
    <label>Type d&apos;enseigne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>