force-app/main/default/objects/Donnees_Vente__c/fields/IBAN_crypte__c.field-meta.xml
<CustomField>
    <fullName>IBAN_crypte__c</fullName>
    <label>IBAN crypté</label>
    <length>255</length>
    <type>Text</type>
</CustomField>