force-app/main/default/objects/Donnees_Vente__c/fields/IBAN_Titulaire__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Titulaire__c</fullName>
    <label>Nom titulaire IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>