force-app/main/default/objects/Donnees_Vente__c/fields/Id_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Id_Contrat__c</fullName>
    <label>Id Contrat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>