force-app/main/default/objects/Donnees_Vente__c/fields/ID_CONTRAT_ELEC__c.field-meta.xml
<CustomField>
    <fullName>ID_CONTRAT_ELEC__c</fullName>
    <label>Id Contrat Elec</label>
    <length>10</length>
    <type>Text</type>
</CustomField>