force-app/main/default/objects/Donnees_Vente__c/fields/Id_cookie_ga__c.field-meta.xml
<CustomField>
    <fullName>Id_cookie_ga__c</fullName>
    <label>Id_cookie_ga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>