force-app/main/default/objects/Donnees_Vente__c/fields/ID_coordonnees_bancaires__c.field-meta.xml
<CustomField>
    <fullName>ID_coordonnees_bancaires__c</fullName>
    <label>ID coordonnées bancaires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>