force-app/main/default/objects/Donnees_Vente__c/fields/Id_form_web__c.field-meta.xml
<CustomField>
    <fullName>Id_form_web__c</fullName>
    <label>Id form web</label>
    <length>80</length>
    <type>Text</type>
</CustomField>