force-app/main/default/objects/Donnees_Vente__c/fields/Id_session_uuid__c.field-meta.xml
<CustomField>
    <fullName>Id_session_uuid__c</fullName>
    <label>Id_session_uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>