force-app/main/default/objects/Donnees_Vente__c/fields/Id_tms__c.field-meta.xml
<CustomField>
    <fullName>Id_tms__c</fullName>
    <label>Id_tms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>