force-app/main/default/objects/Donnees_Vente__c/fields/IdBan__c.field-meta.xml
<CustomField>
    <fullName>IdBan__c</fullName>
    <label>IdBan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>