force-app/main/default/objects/Donnees_Vente__c/fields/Index_elec_HC__c.field-meta.xml
<CustomField>
    <fullName>Index_elec_HC__c</fullName>
    <label>Index elec HC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>