force-app/main/default/objects/Donnees_Vente__c/fields/Index_elec_HP_simple__c.field-meta.xml
<CustomField>
    <fullName>Index_elec_HP_simple__c</fullName>
    <label>Index elec hp simple</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>