force-app/main/default/objects/Donnees_Vente__c/fields/Index_gaz__c.field-meta.xml
<CustomField>
    <fullName>Index_gaz__c</fullName>
    <label>Index gaz</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>