force-app/main/default/objects/Donnees_Vente__c/fields/Libelle_voie__c.field-meta.xml
<CustomField>
    <fullName>Libelle_voie__c</fullName>
    <label>Libelle voie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>