force-app/main/default/objects/Donnees_Vente__c/fields/Maj_email__c.field-meta.xml
<CustomField>
    <fullName>Maj_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if email préfére checkbox is checked</description>
    <label>Maj email</label>
    <type>Checkbox</type>
</CustomField>