force-app/main/default/objects/Donnees_Vente__c/fields/Mensualisation__c.field-meta.xml
<CustomField>
    <fullName>Mensualisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mensualisation</label>
    <type>Checkbox</type>
</CustomField>