force-app/main/default/objects/Donnees_Vente__c/fields/Mensualite_initiale__c.field-meta.xml
<CustomField>
    <fullName>Mensualite_initiale__c</fullName>
    <label>Mensualité initiale</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>