force-app/main/default/objects/Donnees_Vente__c/fields/mensualite_totale_TTC__c.field-meta.xml
<CustomField>
    <fullName>mensualite_totale_TTC__c</fullName>
    <label>mensualite totale TTC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>