force-app/main/default/objects/Donnees_Vente__c/fields/Message_Motif_resiliation__c.field-meta.xml
<CustomField>
    <fullName>Message_Motif_resiliation__c</fullName>
    <label>Message Motif résiliation</label>
    <type>TextArea</type>
</CustomField>