force-app/main/default/objects/Donnees_Vente__c/fields/MONTANT_ABO_ELEC_FOUR__c.field-meta.xml
<CustomField>
    <fullName>MONTANT_ABO_ELEC_FOUR__c</fullName>
    <label>Prix Abonnement fourniture Elec</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>