force-app/main/default/objects/Donnees_Vente__c/fields/MONTANT_ABO_GAZ_FOUR_HT__c.field-meta.xml
<CustomField>
    <fullName>MONTANT_ABO_GAZ_FOUR_HT__c</fullName>
    <label>Prix Abonnement fourniture Gaz HT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>