force-app/main/default/objects/Donnees_Vente__c/fields/Montant_mensualites__c.field-meta.xml
<CustomField>
    <fullName>Montant_mensualites__c</fullName>
    <label>Montant mensualités</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>